Removed a few parameters for plot2d

--- a/functions.ipynb
+++ b/functions.ipynb
@@ -546,20 +546,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "def plot2d(df, xvar, yvar, xlabel, ylabel, title, txt, lim=None):\n",
+    "def plot2d(df, xvar, yvar, xlabel, ylabel, title=None, lim=None):\n",
     "\n",
     "    plt.hexbin(df[xvar], df[yvar], gridsize=50, norm=LogNorm(), cmap='inferno', xscale = 'log', extent=lim)\n",
     "    plt.xlabel(xlabel, fontsize = 15)\n",
     "    plt.ylabel(ylabel, fontsize = 15)\n",
     "    plt.tick_params(labelsize='large')\n",
     "    plt.colorbar()\n",
-    "    plt.title('$' + title + '$', fontsize=15)\n",
-    "\n",
-    "    plt.savefig('images/' + txt + '.pdf', bbox_inches='tight')"
+    "    if title != None:\n",
+    "        plt.title('$' + title + '$', fontsize=15)"
    ]
   },
   {
